--- a/notebooks/Readersourcing.ipynb
+++ b/notebooks/Readersourcing.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 2,
       "metadata": {
         "collapsed": true,
         "pycharm": {
@@ -13,7 +13,7 @@
         {
           "name": "stdout",
           "text": [
-            "TIMESTAMP 0 - READER 0 - PAPER 0 - SCORE 0.8\nTIMESTAMP 1 - READER 1 - PAPER 0 - SCORE 0.2\nTIMESTAMP 2 - READER 2 - PAPER 0 - SCORE 0.2\nTIMESTAMP 3 - READER 2 - PAPER 1 - SCORE 0.5\nTIMESTAMP 4 - READER 3 - PAPER 1 - SCORE 0.5\nTIMESTAMP 5 - READER 3 - PAPER 0 - SCORE 0.8\n"
+            "0/6 (0/100%)\n3/6 (50/100%)\n6/6 (100/100%)\nELAPSED TIME:  0.013010978698730469\n"
           ],
           "output_type": "stream"
         }
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 3,
       "metadata": {
         "collapsed": false,
         "pycharm": {
@@ -55,9 +55,9 @@
       "version": "2.7.6"
     },
     "kernelspec": {
-      "name": "pycharm-c574516d",
+      "name": "python3",
       "language": "python",
-      "display_name": "PyCharm (RS_Py)"
+      "display_name": "Python 3"
     }
   },
   "nbformat": 4,
