Format updated from JSON to CSV for part of the output.

--- a/notebooks/Readersourcing.ipynb
+++ b/notebooks/Readersourcing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -12,17 +12,12 @@
    "outputs": [
     {
      "name": "stdout",
-     "output_type": "stream",
      "text": [
       "0/6 (0/100%)\n",
-      "3/6 (50/100%)\n",
-      "6/6 (100/100%)\n",
-      "PRINTING QUANTITIES TO .JSON FILE AT PATH ../models/ground_truth_1/readersourcing/quantities.json\n",
-      "PRINTING RATING MATRIX TO .JSON FILE AT PATH ../models/ground_truth_1/readersourcing/ratings.json\n",
-      "PRINTING RATING GOODNESS MATRIX TO .JSON FILE AT PATH ../models/ground_truth_1/readersourcing/goodness.json\n",
-      "PRINTING INFO TO .JSON FILE AT PATH ../models/ground_truth_1/readersourcing/info.json\n",
-      "ELAPSED TIME:  0.37900805473327637\n"
-     ]
+      "3/6 (50/100%)\n6/6 (100/100%)\nPRINTING QUANTITIES TO .JSON FILE AT PATH ../models/ground_truth_2/readersourcing/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/ground_truth_2/readersourcing/ratings.csv\nPRINTING RATING GOODNESS MATRIX TO .CSV FILE AT PATH ../models/ground_truth_2/readersourcing/goodness.csv\nPRINTING INFO TO .JSON FILE AT PATH ../models/ground_truth_2/readersourcing/info.json",
+      "\nELAPSED TIME:  0.43799614906311035\n"
+     ],
+     "output_type": "stream"
     }
    ],
    "source": [
@@ -43,7 +38,7 @@
     "\n",
     "# CSV file parsing\n",
     "\n",
-    "dataset_name = \"ground_truth_1\"\n",
+    "dataset_name = \"ground_truth_2\"\n",
     "dataset_folder_path = \"../data/{}/\".format(dataset_name)\n",
     "info_filename = \"{}info.csv\".format(dataset_folder_path)\n",
     "ratings_filename = \"{}ratings.csv\".format(dataset_folder_path)\n",
@@ -66,14 +61,14 @@
     "readers = np.arange(readers_number)\n",
     "ratings = np.arange(ratings_number)\n",
     "authors = np.arange(authors_number)\n",
-    "paper_steadiness = np.zeros(papers_number,dtype=np.dtype(decimal.Decimal))\n",
-    "paper_score = np.zeros(papers_number,dtype=np.dtype(decimal.Decimal))\n",
-    "rating_goodness = np.zeros(ratings_number,dtype=np.dtype(decimal.Decimal))\n",
-    "reader_steadiness = np.zeros(readers_number,dtype=np.dtype(decimal.Decimal))\n",
-    "reader_score = np.zeros(readers_number,dtype=np.dtype(decimal.Decimal))\n",
+    "paper_steadiness = np.zeros(papers_number,dtype=np.float16)\n",
+    "paper_score = np.zeros(papers_number,dtype=np.float16)\n",
+    "rating_goodness = np.zeros(ratings_number,dtype=np.float16)\n",
+    "reader_steadiness = np.zeros(readers_number,dtype=np.float16)\n",
+    "reader_score = np.zeros(readers_number,dtype=np.float16)\n",
     "reader_score.fill(epsilon)\n",
-    "author_steadiness = np.zeros(authors_number, dtype=np.dtype(decimal.Decimal))\n",
-    "author_score = np.zeros(authors_number, dtype=np.dtype(decimal.Decimal))\n",
+    "author_steadiness = np.zeros(authors_number, dtype=np.float16)\n",
+    "author_score = np.zeros(authors_number, dtype=np.float16)\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
@@ -132,25 +127,22 @@
     "        \n",
     "        rating_matrix[reader][paper] = rating\n",
     "        goodness_matrix[reader][paper] = rating_goodness[timestamp]\n",
-    "        \n",
-    "    ratings_dataframe = pd.DataFrame(rating_matrix)\n",
-    "    goodness_dataframe = pd.DataFrame(goodness_matrix)\n",
     "    \n",
-    "    ratings_filename = \"{}readersourcing/ratings.json\".format(result_folder_path)\n",
+    "    ratings_filename = \"{}readersourcing/ratings.csv\".format(result_folder_path)\n",
     "    os.makedirs(\"{}readersourcing/\".format(result_folder_path), exist_ok=True)\n",
     "    \n",
-    "    goodness_filename = \"{}readersourcing/goodness.json\".format(result_folder_path)\n",
+    "    goodness_filename = \"{}readersourcing/goodness.csv\".format(result_folder_path)\n",
     "    os.makedirs(\"{}readersourcing/\".format(result_folder_path), exist_ok=True)\n",
     "    \n",
     "    if verbose:\n",
-    "        print(\"PRINTING RATING MATRIX TO .JSON FILE AT PATH {}\".format(ratings_filename))\n",
-    "    \n",
-    "    ratings_dataframe.to_json(ratings_filename)\n",
+    "        print(\"PRINTING RATING MATRIX TO .CSV FILE AT PATH {}\".format(ratings_filename))\n",
+    "            \n",
+    "    np.savetxt(ratings_filename, rating_matrix, delimiter=\",\")\n",
     "    \n",
     "    if verbose:\n",
-    "        print(\"PRINTING RATING GOODNESS MATRIX TO .JSON FILE AT PATH {}\".format(goodness_filename))\n",
+    "        print(\"PRINTING RATING GOODNESS MATRIX TO .CSV FILE AT PATH {}\".format(goodness_filename))\n",
     "    \n",
-    "    goodness_dataframe.to_json(goodness_filename)\n",
+    "    np.savetxt(goodness_filename, goodness_matrix, delimiter=\",\")\n",
     "    \n",
     "    # Info output handling\n",
     "    \n",
@@ -291,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -301,28 +293,37 @@
    "outputs": [
     {
      "name": "stdout",
-     "output_type": "stream",
      "text": [
-      "PAPER STEADINESS:   [1.000003 0.5527874045000422]\n",
-      "PAPER SCORE:        [0.7999988000036001 0.5]\n",
-      "READER STEADINESS:  [1.000003 1.000003 1.5527904045000422 1.5527904045000422 0 0]\n",
-      "READER SCORE:       [0.9989045565281977 0.22540410535324928 0.5011572610252991\n",
-      " 0.9992945301858136 1e-06 1e-06]\n",
-      "AUTHOR STEADINESS:  [1.5527904045000422]\n",
-      "AUTHOR SCORE:       [0.6932003824409205]\n"
-     ]
+      "PAPER STEADINESS:   [0.00000304 2.71484375]\nPAPER SCORE:        [0.54980469 0.45385742]\nREADER STEADINESS:  [2.71484375 2.71484375 2.71484375]\nREADER SCORE:       [0.69384766 0.31005859 0.34887695]\nAUTHOR STEADINESS:  [2.71484375 2.71484375]\nAUTHOR SCORE:       [0.45385742 0.45385742]\n"
+     ],
+     "output_type": "stream"
     }
    ],
    "source": [
     "# Summary\n",
+    "\n",
     "\n",
     "print(\"PAPER STEADINESS:  \", paper_steadiness)\n",
     "print(\"PAPER SCORE:       \", paper_score)\n",
     "print(\"READER STEADINESS: \", reader_steadiness)\n",
     "print(\"READER SCORE:      \", reader_score)\n",
     "print(\"AUTHOR STEADINESS: \", author_steadiness)\n",
-    "print(\"AUTHOR SCORE:      \", author_score)\n"
+    "print(\"AUTHOR SCORE:      \", author_score)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
@@ -346,10 +347,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
