--- a/notebooks/TrueReview.ipynb
+++ b/notebooks/TrueReview.ipynb
@@ -13,7 +13,7 @@
     {
      "name": "stdout",
      "text": [
-      "---------- CURRENT PAPER: 0 ----------\n0/6 (0/100%)\n6/6 (100/100%)\n---------- CURRENT PAPER: 1 ----------\n0/6 (0/100%)\n6/6 (100/100%)\n--------------------\nELAPSED TIME:  0.003001689910888672\n"
+      "---------- CURRENT PAPER: 0 ----------\n0/6 (0/100%)\n6/6 (100/100%)\n---------- CURRENT PAPER: 1 ----------\n0/6 (0/100%)\n6/6 (100/100%)\n--------------------\nELAPSED TIME:  0.001001119613647461\n"
      ],
      "output_type": "stream"
     }
@@ -175,7 +175,11 @@
     {
      "name": "stdout",
      "text": [
-      "RATING INFORMATIVENESS:  [0.00 0.00 0.01 0.11 0.00 0.00]\nRATING ACCURACY LOSS:    [0.00 0.00 0.01 0.81 0.00 0.00]\nRATING BONUS:            [0.00 0.00 0.02 0.19 0.00 0.00]\nREADER BONUS:            [0.00 0.21 0.00]\nPAPER  SCORE:            [0.54 0.44]\nPRINTING QUANTITIES TO .JSON FILE AT PATH ../models/ground_truth_2/truereview/quantities.json\nPRINTING RATING MATRIX TO .JSON FILE AT PATH ../models/ground_truth_2/truereview/ratings.json\nPRINTING INFO TO .JSON FILE AT PATH ../models/ground_truth_2/truereview/info.json\n"
+      "RATING INFORMATIVENESS: ",
+      " [0.00 0.00 0.01 0.11 0.00 0.00]\nRATING ACCURACY LOSS:    [0.00 0.00 0.01 0.81 0.00 0.00]\nRATING BONUS:            [0.00 0.00 0.02 0.19 0.00 0.00]\nREADER BONUS:            [0.00 0.21 0.00]\nPAPER  SCORE:            [0.54 0.44]\n",
+      "PRINTING QUANTITIES TO .JSON FILE AT PATH ../models/ground_truth_2/truereview/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/ground_truth_2/truereview/ratings.csv",
+      "\nPRINTING INFO TO .JSON FILE AT PATH ../models/ground_truth_2/truereview/info.json",
+      "\n"
      ],
      "output_type": "stream"
     }
@@ -225,14 +229,12 @@
     "    \n",
     "    rating_matrix[reader][paper] = rating\n",
     "    \n",
-    "ratings_dataframe = pd.DataFrame(rating_matrix)\n",
-    "\n",
-    "ratings_filename = f\"{result_folder_path}truereview/ratings.json\"\n",
+    "ratings_filename = f\"{result_folder_path}truereview/ratings.csv\"\n",
     "os.makedirs(f\"{result_folder_path}truereview/\", exist_ok=True)\n",
     "\n",
-    "print(f\"PRINTING RATING MATRIX TO .JSON FILE AT PATH {ratings_filename}\")\n",
+    "print(f\"PRINTING RATING MATRIX TO .CSV FILE AT PATH {ratings_filename}\")\n",
     "\n",
-    "ratings_dataframe.to_json(ratings_filename)\n",
+    "np.savetxt(ratings_filename, rating_matrix, delimiter=\",\")\n",
     "\n",
     "# Info output handling\n",
     "\n",
@@ -246,8 +248,22 @@
     "print(\"PRINTING INFO TO .JSON FILE AT PATH {}\".format(info_filename))\n",
     "        \n",
     "with open(info_filename, 'w') as outfile:  \n",
-    "    json.dump(dictionary, outfile)\n"
+    "    json.dump(dictionary, outfile)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
