Fixes to previous commits.

--- a/notebooks/Readersourcing.ipynb
+++ b/notebooks/Readersourcing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -13,9 +13,8 @@
     {
      "name": "stdout",
      "text": [
-      "0/6 (0/100%)\n",
-      "3/6 (50/100%)\n6/6 (100/100%)\nPRINTING QUANTITIES TO .JSON FILE AT PATH ../models/ground_truth_2/readersourcing/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/ground_truth_2/readersourcing/ratings.csv\nPRINTING RATING GOODNESS MATRIX TO .CSV FILE AT PATH ../models/ground_truth_2/readersourcing/goodness.csv\nPRINTING INFO TO .JSON FILE AT PATH ../models/ground_truth_2/readersourcing/info.json",
-      "\nELAPSED TIME:  0.43799614906311035\n"
+      "0/6 (0/100%)\n3/6 (50/100%)\n",
+      "6/6 (100/100%)\nPRINTING QUANTITIES TO .JSON FILE AT PATH ../models/ground_truth_1/readersourcing/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/ground_truth_1/readersourcing/ratings.csv\nPRINTING RATING GOODNESS MATRIX TO .CSV FILE AT PATH ../models/ground_truth_1/readersourcing/goodness.csv\nPRINTING INFO TO .JSON FILE AT PATH ../models/ground_truth_1/readersourcing/info.json\nELAPSED TIME:  0.32999730110168457\n"
      ],
      "output_type": "stream"
     }
@@ -26,6 +25,7 @@
     "import decimal\n",
     "import math as m\n",
     "from matplotlib import pyplot as plt\n",
+    "import csv\n",
     "import os\n",
     "import time\n",
     "import json\n",
@@ -38,7 +38,7 @@
     "\n",
     "# CSV file parsing\n",
     "\n",
-    "dataset_name = \"ground_truth_2\"\n",
+    "dataset_name = \"ground_truth_1\"\n",
     "dataset_folder_path = \"../data/{}/\".format(dataset_name)\n",
     "info_filename = \"{}info.csv\".format(dataset_folder_path)\n",
     "ratings_filename = \"{}ratings.csv\".format(dataset_folder_path)\n",
@@ -110,6 +110,7 @@
     "    \n",
     "    with open(quantities_filename, 'w') as outfile:  \n",
     "        json.dump(dictionary, outfile)\n",
+    "    outfile.close()\n",
     "        \n",
     "    # Rating and goodness matrix output handling\n",
     "    \n",
@@ -137,12 +138,20 @@
     "    if verbose:\n",
     "        print(\"PRINTING RATING MATRIX TO .CSV FILE AT PATH {}\".format(ratings_filename))\n",
     "            \n",
-    "    np.savetxt(ratings_filename, rating_matrix, delimiter=\",\")\n",
+    "    with open(ratings_filename, mode='w', newline='') as rating_file:\n",
+    "        rating_writer = csv.writer(rating_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
+    "        for rating_entry in rating_matrix:\n",
+    "            rating_writer.writerow(rating_entry)\n",
+    "    rating_file.close()\n",
     "    \n",
     "    if verbose:\n",
     "        print(\"PRINTING RATING GOODNESS MATRIX TO .CSV FILE AT PATH {}\".format(goodness_filename))\n",
     "    \n",
-    "    np.savetxt(goodness_filename, goodness_matrix, delimiter=\",\")\n",
+    "    with open(goodness_filename, mode='w', newline='') as goodness_file:\n",
+    "        goodness_writer = csv.writer(goodness_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
+    "        for goodness_entry in goodness_matrix:\n",
+    "            goodness_writer.writerow(goodness_entry)\n",
+    "    goodness_file.close()\n",
     "    \n",
     "    # Info output handling\n",
     "    \n",
@@ -158,6 +167,7 @@
     "        \n",
     "    with open(info_filename, 'w') as outfile:  \n",
     "        json.dump(dictionary, outfile)\n",
+    "    outfile.close()\n",
     "    \n",
     "    return elapsed_time\n",
     "\n",
@@ -283,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -294,7 +304,7 @@
     {
      "name": "stdout",
      "text": [
-      "PAPER STEADINESS:   [0.00000304 2.71484375]\nPAPER SCORE:        [0.54980469 0.45385742]\nREADER STEADINESS:  [2.71484375 2.71484375 2.71484375]\nREADER SCORE:       [0.69384766 0.31005859 0.34887695]\nAUTHOR STEADINESS:  [2.71484375 2.71484375]\nAUTHOR SCORE:       [0.45385742 0.45385742]\n"
+      "PAPER STEADINESS:   [1.00000000 0.54882812]\nPAPER SCORE:        [0.79980469 0.50000000]\nREADER STEADINESS:  [1.00000000 1.00000000 1.54882812 1.54882812 0.00000000 0.00000000]\nREADER SCORE:       [0.98583984 0.22558594 0.50000000 0.99121094 0.00000101 0.00000101]\nAUTHOR STEADINESS:  [1.54882812]\nAUTHOR SCORE:       [0.69384766]\n"
      ],
      "output_type": "stream"
     }
