--- a/notebooks/TrueReview.ipynb
+++ b/notebooks/TrueReview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -13,7 +13,7 @@
     {
      "name": "stdout",
      "text": [
-      "---------- CURRENT PAPER: 0 ----------\n0/6 (0/100%)\n6/6 (100/100%)\n---------- CURRENT PAPER: 1 ----------\n0/6 (0/100%)\n6/6 (100/100%)\n--------------------\nELAPSED TIME:  0.001001119613647461\n"
+      "---------- CURRENT PAPER: 0 ----------\n0/6 (0/100%)\n3/6 (50/100%)\n6/6 (100/100%)\n---------- CURRENT PAPER: 1 ----------\n0/6 (0/100%)\n6/6 (100/100%)\n--------------------\nELAPSED TIME:  0.001001119613647461\n"
      ],
      "output_type": "stream"
     }
@@ -23,6 +23,7 @@
     "import seaborn as sb\n",
     "import numpy as np\n",
     "import time\n",
+    "import csv\n",
     "import math as m\n",
     "from matplotlib import pyplot as plt\n",
     "import os\n",
@@ -32,7 +33,7 @@
     "\n",
     "# CSV file parsing\n",
     "\n",
-    "dataset_name = \"ground_truth_2\"\n",
+    "dataset_name = \"ground_truth_1\"\n",
     "dataset_folder_path = f\"../data/{dataset_name}/\"\n",
     "info_filename = f\"{dataset_folder_path}info.csv\"\n",
     "ratings_filename = f\"{dataset_folder_path}ratings.csv\"\n",
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -176,10 +177,9 @@
      "name": "stdout",
      "text": [
       "RATING INFORMATIVENESS: ",
-      " [0.00 0.00 0.01 0.11 0.00 0.00]\nRATING ACCURACY LOSS:    [0.00 0.00 0.01 0.81 0.00 0.00]\nRATING BONUS:            [0.00 0.00 0.02 0.19 0.00 0.00]\nREADER BONUS:            [0.00 0.21 0.00]\nPAPER  SCORE:            [0.54 0.44]\n",
-      "PRINTING QUANTITIES TO .JSON FILE AT PATH ../models/ground_truth_2/truereview/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/ground_truth_2/truereview/ratings.csv",
-      "\nPRINTING INFO TO .JSON FILE AT PATH ../models/ground_truth_2/truereview/info.json",
-      "\n"
+      " [0.00 0.09 0.09 0.00 0.00 0.00]\nRATING ACCURACY LOSS:    [0.00 0.09 0.36 0.00 0.00 0.00]\nRATING BONUS:            [0.00 0.23 0.19 0.00 0.00 0.00]\nREADER BONUS:            [0.00 0.23 0.19 0.00 0.00 0.00]\nPAPER  SCORE:            [0.50 0.50]\nPRINTING QUANTITIES TO .JSON FILE AT PATH ../models/ground_truth_1/truereview/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/ground_truth_1/truereview/ratings.csv",
+      "\n",
+      "PRINTING INFO TO .JSON FILE AT PATH ../models/ground_truth_1/truereview/info.json\n"
      ],
      "output_type": "stream"
     }
@@ -234,7 +234,11 @@
     "\n",
     "print(f\"PRINTING RATING MATRIX TO .CSV FILE AT PATH {ratings_filename}\")\n",
     "\n",
-    "np.savetxt(ratings_filename, rating_matrix, delimiter=\",\")\n",
+    "with open(ratings_filename, mode='w', newline='') as rating_file:\n",
+    "    rating_writer = csv.writer(rating_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
+    "    for rating_entry in rating_matrix:\n",
+    "        rating_writer.writerow(rating_entry)\n",
+    "rating_file.close()\n",
     "\n",
     "# Info output handling\n",
     "\n",
@@ -248,7 +252,8 @@
     "print(\"PRINTING INFO TO .JSON FILE AT PATH {}\".format(info_filename))\n",
     "        \n",
     "with open(info_filename, 'w') as outfile:  \n",
-    "    json.dump(dictionary, outfile)"
+    "    json.dump(dictionary, outfile)\n",
+    "outfile.close()"
    ]
   },
   {
